--- a/src/app/Paginas/Header/nav-encode/nav-encode.component.html
+++ b/src/app/Paginas/Header/nav-encode/nav-encode.component.html
@@ -60,7 +60,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <!-- class="dropdown-item" (click)="userService.prueba()">Prueba</a>
             <a class="dropdown-item" (click)="generatePass()">Generate Pass</a-->
-            <!--a class="dropdown-item" (click)="insertCurrencies()">Currency</a-->
+            <a class="dropdown-item" (click)="insertCurrencies()">Currency</a>
             <a class="dropdown-item padding-left-p" [routerLink]="['/perfil']" >
               <span class="margin-rigth-p">
                 <fa-icon [icon]="util.faCog"></fa-icon>
