--- a/src/styles.css
+++ b/src/styles.css
@@ -262,8 +262,14 @@ app-gastos-entradas {
   background-color: rgb(35, 200, 0) !important;
   color: white !important;
 }
+.HeaderSelected:hover {
+  background-color: rgb(35, 190, 0) !important;
+}
 .HeaderNoSelected {
-  background-color: #e1e1e1 !important;
+  background-color: #e6e6e6 !important;
+}
+.HeaderNoSelected:hover {
+  background-color: #dcdcdc !important;
 }
 .HeaderSelected #device-android{
   filter: saturate(2.5) !important;
@@ -300,6 +306,12 @@ app-gastos-entradas {
 {
   display: block;
 }
+/*
+.table-fixed thead,
+.table-fixed-bu thead {
+  border-top: 2px solid #454d55 !important;
+  border-bottom: 2px solid #454d55 !important;
+}*/
 
 .table-fixed thead tr,
 .table-fixed-bu thead tr,
@@ -363,32 +375,32 @@ app-gastos-entradas {
   height: 125px !important;
 }
 .table-fixed-xl thead tr {
-  height: 125px !important;
+  width: calc(100% - 17px);
+  height: 100% !important;
+}
+.table-fixed-xl thead{
+  background-color: black !important;
+  border-top: 2px solid #454d55;
+  border-bottom: 2px solid #454d55;
+}
+.table-fixed-xl thead tr > th {
+  background-color: black !important;
+  border-color: #000000 !important;
 }
 @media screen and (max-width: 1920px) and (max-height: 1080px) {
   .table-fixed-xl {
     height: 725px !important;
-    /*width: calc(1920px - 18px) !important;*/
-  }
-  .table-fixed-xl thead{
-    /*width: calc(1920px - 18px) !important;*/
   }
   .table-fixed-xl tbody{
     height: 600px !important;
-    /*width: calc(1920px - 18px) !important;*/
   }
 }
 @media screen and (max-width: 1366px) and (max-height: 768px) {
   .table-fixed-xl {
     height: 525px !important;
-    /*width: calc(1366px - 18px) !important;*/
-  }
-  .table-fixed-xl thead tr{
-    /*width: calc(1366px - 18px) !important;*/
   }
   .table-fixed-xl tbody{
     height: 400px !important;
-    /*width: calc(1366px - 18px) !important;*/
   }
 }
 
