--- a/src/app/Paginas/Body/usuarios/usuarios.component.css
+++ b/src/app/Paginas/Body/usuarios/usuarios.component.css
@@ -39,10 +39,11 @@
 .avatar-user {
   filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.5));
   border-radius: 50%;
-  height: 210px;
   position: absolute;
   top: 60px;
   transition: all 0.4s ease ;
+  width: 210px;
+  height: 210px;
 }
 
 .card-user:hover {
@@ -52,6 +53,7 @@
 .card-user:hover > .card-header > img {
   top: 50px;
   height: 230px;
+  width: 230px;
 }
 .card-footer {
   margin: 0px;
@@ -192,4 +194,14 @@
 }
 .HeaderNoSelected:hover {
   background-color: #ededed !important;
+}
+
+.img-preview{
+  width: 280px; height: 280px; border-radius: 50%; position: relative;
+}
+.img-preview > img{
+  width: 100%; height: 100%; border-radius: 50%; position: absolute; background: #1b0d37;filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
+}
+.img-preview > input{
+  left: 0; top: 0; right: 0; bottom: 0; width: 100%; height: 100%; position: absolute; opacity: 0;  cursor: pointer;
 }
