--- a/src/app/Paginas/Body/usuarios/usuarios.component.html
+++ b/src/app/Paginas/Body/usuarios/usuarios.component.html
@@ -80,18 +80,13 @@
 
             <div class="form-row">
 
-              <div class="col-4 flex-column align-content-center justify-content-center" style="display: flex; padding-bottom: 15px;">
-                <img class="w-100 h-100 bg-dark rounded mb-2" id="imgSalida" width="100%" height="250 px" [src]="rutaImg"/>
-                <input type="file" id="imagenP" name="imagenP" id="imagen" formControlName="imagen"  (change)="agregarImagen($event)">
-                <!--div class="w-100 h-100 bg-dark rounded mb-2"></div>
-                <button type= "button" class="btn btn-outline-info">
-                  <span>
-                    <fa-icon [icon]="util.faFileImage"></fa-icon>
-                  </span>
-                </button-->
+              <div class="col-5 d-flex align-content-center justify-content-center">
+                <div class="img-preview">
+                  <img  id="imgSalida" src="{{urlImg}}"/>
+                  <input [disabled]="util.isDelete(option)" type="file" (change)="agregarImagen($event)" accept="image/*">
+                </div>
               </div>
-              <div class="col-8">
-
+              <div class="col-7">
                 <div class="form-group">
                   <label for="email">Email: </label>
                   <input type="email" class="form-control" id="email" formControlName="email" [ngClass]="(getError('email') == '') ? 'valid-control' : 'invalid-control'">
