--- a/src/app/Paginas/Body/usuarios/perfil/perfil.component.html
+++ b/src/app/Paginas/Body/usuarios/perfil/perfil.component.html
@@ -1,1 +1,164 @@
 <app-titulo-encabezado titulo="Perfil"></app-titulo-encabezado>
+
+<div class="modal fade" id="modalUsuarioUpdate" tabindex="-1" role="dialog" aria-labelledby="modalUsuarioUpdateTitle" aria-hidden="true" data-keyboard="false" data-backdrop="static" *ngIf="Usuario != null">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title centerTitleModal" id="modalUsuarioUpdateTitle">Actualizar Perfil</h5>
+        <button type="button" class="close" (click)="closeModal()">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <form [formGroup]="Usuario" (ngSubmit)="UpdateUsuario()">
+        <div class="modal-body">
+          <div class="container">
+
+            <div class="form-group">
+                <div class="form-group">
+                  <label for="email">Email: </label>
+                  <input type="email" class="form-control" id="email" formControlName="email" [ngClass]="(getError('email') == '') ? 'valid-control' : 'invalid-control'">
+                  <div class="invalid-feedback">{{ getError('email')}}</div>
+                </div>
+
+                <div class="form-row">
+                    <div class="form col">
+                      <label for="tipo">Tipo: </label>
+                      <select class="form-control" id="tipo" formControlName="tipo" [ngClass]="(getError('tipo') == '') ? 'valid-control' : 'invalid-control'">
+                        <option value="">Seleccione un tipo</option>
+                        <option value="superAdmin">Super Administrador</option>
+                        <option value="admin">Administrador</option>
+                        <option value="aux">Auxiliar</option>
+                      </select>
+                      <div class="invalid-feedback">{{ getError('tipo')}}</div>
+                    </div>
+                    <div class="form col">
+                      <label for="cargo">Cargo: </label>
+                      <input type="text" class="form-control" id="cargo" formControlName="cargo" [ngClass]="(getError('cargo') == '') ? 'valid-control' : 'invalid-control'">
+                      <div class="invalid-feedback">{{ getError('cargo')}}</div>
+                    </div>
+                </div>
+            </div>
+
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-outline-secondary" (click)="closeModal()">Cerrar</button>
+          <button type="submit" class="btn btn-primary" [disabled]="Usuario.invalid">Actualizar</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+
+
+<div class="super-container">
+  <div class="row">
+    <div class="col-7 card info" style="" id="card-img">
+      <div class="desenfoque" >
+        <img src="./../../../../../assets/img/background-lg-Logo.png" >
+      </div>
+      <div class="col-img position-absolute">
+        <div class="img-preview">
+          <img [src]="usuarioService.url + 'util/avatar/' + usuarioService.UsuarioCurrent.imagen" class="rounded-circle w-100 bg-light profile-avatar mb-5">
+          <input [disabled]="util.isDelete(option)" type="file" (change)="actualizarImagen($event)" accept="image/*">
+        </div>
+      </div>
+    </div>
+    <div class="col-5 card info bg-info" style="" id="card-info-user">
+      <div class="container">
+        <div class="row d-flex flex-column align-content-center justify-content-center">
+          <div class="col d-flex flex-column mb-5 align-content-center justify-content-center padd">
+            <h3 class="font-weight-light text-center">Email:</h3>
+            <h3 class="font-weight-normal text-center item-transparent">{{usuarioService.UsuarioCurrent.email}}</h3>
+          </div>
+          <div class="col d-flex mb-5 flex-row align-content-center justify-content-center">
+            <div class="col d-flex flex-column align-content-center justify-content-center">
+              <h3 class="font-weight-light text-center">Tipo:</h3>
+              <h3 class="font-weight-normal text-center item-transparent">{{usuarioService.UsuarioCurrent.tipo}}</h3>
+            </div>
+            <div class="col d-flex flex-column align-content-center justify-content-center">
+              <h3 class="font-weight-light text-center">Cargo:</h3>
+              <h3 class="font-weight-normal text-center item-transparent">{{usuarioService.UsuarioCurrent.cargo}}</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+      <button class="btn btn-info rounded-circle btn-key">
+      <span>
+          <fa-icon [icon]="util.faKey"></fa-icon>
+      </span>
+      </button>
+    </div>
+
+  </div>
+
+  <div   class="card rounded shadow-sm mb-md-1 mt-5 card-rounded-feature BodySelected">
+    <div class="card-header HeaderSelected">
+      <div class="row content-row" >
+        <div class="col-11 column-userData text-center" >
+          <div class="row">
+            <div class="col-12">
+              <div class="d-inline-flex align-content-center align-items-center" >
+
+                <h3 class="font-weight-500 text-center" style="font-size: 23px!important;">Permisos</h3>
+
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-1 column-checkCollapse">
+          <button type="button" class="btn btn-outline-info rounded-circle btn-check-Collapse"  (click)="verficarExpansion()">
+            <span>
+                <fa-icon *ngIf="isExpandCntPermisos" [icon]="util.faChevronDown"></fa-icon>
+                <fa-icon *ngIf="!isExpandCntPermisos" [icon]="util.faChevronUp"></fa-icon>
+            </span>
+          </button>
+        </div>
+      </div>
+
+    </div>
+
+    <div #cntPermisos class="tarjetaCuerpo bg-transparent">
+      <div>
+        <table class="table table-hover table-fixed">
+          <thead>
+          <tr class="text-center" >
+            <th scope="col" class="v-a-middle width-sm">#</th>
+            <th scope="col" class="v-a-middle width-md">
+              <div class="row inline-grid">
+                Permiso
+              </div>
+            </th>
+            <th scope="col" class="v-a-middle width-lg">
+              <div class="row inline-grid">
+                Descripción
+              </div>
+            </th>
+          </tr>
+          </thead>
+          <tbody >
+          <tr class="text-center"  *ngFor="let permiso of usuarioService.UsuarioCurrent.permisos; let pos = index">
+            <td scope="row" class="v-a-middle font-weight-bold width-sm">{{ pos + 1 }}</td>
+            <td scope="row" class="v-a-middle width-md">{{ permiso.permiso }}</td>
+            <td scope="row" class="v-a-middle width-lg">{{ permiso.descripcion }}</td>
+          </tr>
+          </tbody>
+        </table>
+        <div class="container" *ngIf="usuarioService.UsuarioCurrent.permisos.length == 0">
+          <h5 class="font-weight-lighter">No tienes privilegios todavia, solo puedes ver los modulos habilitados para ti</h5>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+<button class="btn btn-outline-success rounded-circle addButton" data-toggle="modal" data-target="#modalUsuarioUpdate" (click)="actionUpdateUsuario()">
+  <span>
+    <fa-icon [icon]="util.faPen" ></fa-icon>
+  </span>
+</button>
