--- a/src/app/Paginas/Body/home/home.component.css
+++ b/src/app/Paginas/Body/home/home.component.css
@@ -1,6 +1,8 @@
 .container-home {
-  background-image:url('../../../../assets/img/background-lg.png');
+  width: 100%;
+  /*background-image:url('../../../../assets/img/background-lg.png');*/
   background-size: 100%;
+  background-color: black;
 }
 @media screen and (max-width: 1920px) and (max-height: 1080px) {
   .container-home {
