--- a/src/app/Paginas/Body/home/home.component.html
+++ b/src/app/Paginas/Body/home/home.component.html
@@ -8,6 +8,7 @@
 </ngx-spinner>
 
 <div class="container-home">
+  <img src="./../../../../assets/img/background-lg.png" style="width: 100%; height: 100%;  /*filter: blur(20px) !important;*/">
 </div>
 
 <div class="searchBar">
