--- a/src/app/Paginas/Body/usuarios/usuarios.component.css
+++ b/src/app/Paginas/Body/usuarios/usuarios.component.css
@@ -15,6 +15,10 @@
   padding: 100px 150px;
 }
 .card-user {
+  overflow: hidden;
+  border-radius: 15px;
+  box-sizing: border-box;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   height: 100%;
   width: 100%;
   /*filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.5));*/
