Actualzar contraseña teminado

--- a/src/app/Paginas/Body/exportacion/exportacion.component.html
+++ b/src/app/Paginas/Body/exportacion/exportacion.component.html
@@ -121,8 +121,8 @@
         <div class="col-1 column-checkCollapse">
           <button type="button" class="btn btn-outline-info rounded-circle btn-check-Collapse"  (click)="verficarExpansion(i, user.id_user, user.email)">
             <span>
-                <fa-icon *ngIf="!user.collapsed" [icon]="util.faArrowDown"></fa-icon>
-              <fa-icon *ngIf="user.collapsed" [icon]="util.faArrowUp"></fa-icon>
+                <fa-icon *ngIf="!user.collapsed" [icon]="util.faChevronDown"></fa-icon>
+              <fa-icon *ngIf="user.collapsed" [icon]="util.faChevronUp"></fa-icon>
             </span>
           </button>
         </div>
