--- a/src/app/Paginas/Body/detalle-usuario/entradas/entradas.component.css
+++ b/src/app/Paginas/Body/detalle-usuario/entradas/entradas.component.css
@@ -8,6 +8,9 @@
 .table-fixed tbody tr {
   height: 40px !important;
 }
+.table-fixed thead{
+  height: 50px !important;
+}
 @media screen and (max-width: 1920px) and (max-height: 1080px) {
   .table-fixed tbody{
     height: 600px !important;
