--- a/src/app/Paginas/Body/home/home.component.css
+++ b/src/app/Paginas/Body/home/home.component.css
@@ -62,13 +62,6 @@
 
 .inputSearch {
   background: rgba(255, 255, 255, 0.85)!important;
-  filter: drop-shadow(5px 5px 2px #000000);
+  filter: drop-shadow(5px 5px 3px #000000) !important;
   color: #001323;
-}
-.btn-primary {
-  color: #e8d9e8;
-  background-color: rgb(0, 19, 35);
-  border-color: #005065;
-  filter: drop-shadow(5px 5px 2px #000000);
-
 }
