--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/inconsistencia.component.css
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/inconsistencia.component.css
@@ -1,6 +1,25 @@
-.main-principal {
-  height: 700px; overflow: scroll;
+@media screen and (max-width: 1920px) and (max-height: 1080px) {
+  .table-fixed,
+  .table-fixed-bu {
+    height: 600px;
+  }
+  .table-fixed tbody,
+  .table-fixed-bu tbody {
+    height: 488px;
+  }
 }
+@media screen and (max-width: 1366px) and (max-height: 768px) {
+  .table-fixed,
+  .table-fixed-bu {
+    height: 400px;
+  }
+  .table-fixed tbody,
+  .table-fixed-bu tbody {
+    height: 288px;
+  }
+}
+
+
 .custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before {
   /* background-color: rgba(0, 123, 255, 0.5); */
   color: #fff !important;
