--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/inconsistencia.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/inconsistencia.component.html
@@ -46,11 +46,9 @@
         </button>
       </div>
       <div class="modal-body">
-        <br>
-        <div class="row" style="width: 100%; display: block; margin-bottom: 20px;">
-          <h4 class="text-center" style="font-weight: 500;">Usuario{{((util.userMntInconsistencia.email == "Generales")  ? "s ": ": ") + util.userMntInconsistencia.email}}</h4>
+        <div class="row" style="width: 100%; display: block; margin-bottom: 20px;margin-top: 20px">
+          <h5 class="text-center" style="font-weight: 500;">Usuario{{((util.userMntInconsistencia.email == "Generales")  ? "s ": ": ") + util.userMntInconsistencia.email}}</h5>
         </div>
-        <br>
         <div *ngIf="backupService.userBackups[backupService.indexUser].backups.length > 0">
             <table class="table table-hover" [ngClass]="(util.userMntInconsistencia.email == 'Generales') ? 'table-fixed-bu' : 'table-fixed'">
               <thead class="thead-dark">
@@ -191,7 +189,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="cerrarModal()">Cerrar</button>
+        <button type="button" class="btn btn-outline-secondary" data-dismiss="modal" (click)="cerrarModal()">Cerrar</button>
         <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="guardarValorBackups()">Guardar</button>
       </div>
     </div>
