--- a/src/app/Paginas/Body/usuarios/usuarios.component.css
+++ b/src/app/Paginas/Body/usuarios/usuarios.component.css
@@ -25,12 +25,12 @@
 
 }
 .card-header-user {
-  border-radius: 0px !important;
+  border-radius: 0 !important;
   height: 300px;
   display: flex;
   justify-content: center;
   align-items: center;
-  align-content: start;
+  /*align-content: start;*/
   overflow: hidden;
 }
 .card-body-user {
@@ -60,26 +60,30 @@
   width: 230px;
 }
 .card-footer {
-  margin: 0px;
-  padding: 0px;
-  padding-top: 5px;
+  margin: 0;
+  padding: 15px 0 0 0!important;
   width: 100%;
-  height: 5px;
+  height: 15px !important;
   background-color: #1b0d37;
   position: absolute;
-  bottom: 0px;
-  transition: all 0.4s ease ;
+  bottom: 0;
+  transition: all 0.4s ease-in-out ;
   display: flex;
   justify-content: space-around;
   align-items: center;
   overflow: hidden;
 }
 .card:hover > .card-footer {
-  padding: 0.75rem 1.25rem;
+  padding: 0.75rem 1.25rem !important;
   height: 100px !important;
 }
+.card:hover > .card-footer > .col > .button-option {
+  /*height: 100% !important;*/
+}
+
 
 .button-option {
+  /*height: 0 !important;*/
   width: 100%;
   font-size: 18px;
 }
